Added latest changes for DELETE operation in API and UI

--- a/ToDoApp/src/app/home/home.component.html
+++ b/ToDoApp/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <h2>Welcome to Home component</h2>
 <p>home works!</p>
+<a class="btn btn-primary" href="http://localhost:4200/tasks" role="button">GetTasks</a>
