--- a/ToDoApp/src/app/task/task.component.html
+++ b/ToDoApp/src/app/task/task.component.html
@@ -41,37 +41,6 @@
   </nav>
 <h1>Task Component</h1>
 <p>tasks tab works!</p>
-<h4>Total task count <h2>{{tasks.length}}</h2></h4>
-<!-- Table to display the details of the Tasks -->
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">TaskName</th>
-            <th scope="col">Priority</th>
-            <th scope="col">Type</th>
-            <th scope="col">Description</th>
-            <th scope="col">StartDate</th>
-            <th scope="col">EndDate</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let task of tasks">
-            <th scope="row">{{task.id}}</th>
-            <td>{{task.name}}</td>
-            <td>{{task.priority}}</td>
-            <td>{{task.type}}</td>
-            <td>{{task.description}}</td>
-            <td>{{task.startDate}}</td>
-            <td>{{task.endDate}}</td>
-            <td>
-              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTask(task.id)">Delete</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-
-<button type="button" class="btn btn-danger btn-sm" (click)="getTasks()">GetTasks</button>
 
 <!-- Form to get the details of the new task to be created -->
 
@@ -96,8 +65,12 @@
         <input type="text" formControlName = "type" class="form-control" id="type" >
     </div>
     <div class="col-md-4">
-        <label for="Type" class="form-label">Description</label>
-        <input type="text" formControlName = "description" class="form-control" id="type" >
+      <label for="PercentageCompleted" class="form-label">PercentageCompleted</label>
+      <input type="text" formControlName = "percentageCompleted" class="form-control" id="PercentageCompleted" >
+  </div>
+    <div class="col-md-4">
+        <label for="Description" class="form-label">Description</label>
+        <input type="text" formControlName = "description" class="form-control" id="description" >
     </div>
     <div class="col-md-2">
         <label for="startDate" class="form-label">StartDate</label>
@@ -107,7 +80,67 @@
         <label for="endDate" class="form-label">EndDate</label>
         <input type="date" class="form-control" formControlName = "endDate" id="endDate" >
     </div>
+
+    <!-- <div class="col-md-2">
+    <ngx-colors
+    ngx-colors-trigger
+    style="display: inline-block; margin:5px;"
+    formControlName="color"
+  ></ngx-colors>
+  </div> -->
+
     <div class="col-12">
       <input type = "submit" class="btn btn-primary" value = "Submit">
     </div>
   </form>
+
+
+  <h4>Total task count <h2>{{tasks.length}}</h2></h4>
+<!-- Table to display the details of the Tasks -->
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">TaskName</th>
+            <th scope="col">Priority</th>
+            <th scope="col">Type</th>
+            <th scope="col">PercentageCompleted</th>
+            <th scope="col">Description</th>
+            <th scope="col">StartDate</th>
+            <th scope="col">EndDate</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let task of tasks">
+            <th scope="row">{{task.id}}</th>
+            <td>{{task.name}}</td>
+            <td>{{task.priority}}</td>
+            <td>{{task.type}}</td>
+            <td>{{task.percentageCompleted}}</td>
+            <td>{{task.description}}</td>
+            <td>{{task.startDate}}</td>
+            <td>{{task.endDate}}</td>
+            <td>
+              <button type="button" class="btn btn-danger btn-sm" (click)="deleteTask(task.id)">Delete</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<button type="button" class="btn btn-danger btn-sm" (click)="getTasks()">GetTasks</button>
+
+
+<ngx-charts-pie-chart
+  [view]="view"
+  [scheme]="colorScheme"
+  [results]="chartData"
+  [gradient]="gradient"
+  [legend]="showLegend"
+  [legendPosition]="legendPosition"
+  [labels]="showLabels"
+  [doughnut]="isDoughnut"
+  (select)="onSelect($event)"
+  (activate)="onActivate($event)"
+  (deactivate)="onDeactivate($event)"
+  >
+</ngx-charts-pie-chart>
